deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-app
  namespace: profile-site
  labels:
    app: front-end
spec:
  replicas: 2
  selector:
    matchLabels:
      app: front-end
  template:
    metadata:
      labels:
        app: front-end
    spec:
      containers:
      - name: front-end-container
        image: shahdevelopment/kube:v1.3
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 3000
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
      imagePullSecrets:
      - name: secret-tiger-docker
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-backend
  namespace: profile-site
  labels:
    app: back-end
spec:
  replicas: 3
  selector:
    matchLabels:
      app: back-end
  template:
    metadata:
      labels:
        app: back-end
    spec:
      containers:
      - name: back-end-container
        image: shahdevelopment/kube_back:v1.3
        imagePullPolicy: Always
        ports:
        - name: http
          containerPort: 9000
        resources:
          requests:
            memory: 64Mi
            cpu: 100m
          limits:
            memory: 128Mi
            cpu: 300m
      imagePullSecrets:
      - name: secret-tiger-docker
---
apiVersion: v1
kind: Service
metadata:
  name: front-end-service
  namespace: profile-site
spec:
  selector:
    app: front-end
  ports:
  - protocol: TCP
    port: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: back-end-service
  namespace: profile-site
spec:
  selector:
    app: back-end
  ports:
  - protocol: TCP
    port: 9000
